--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                     </ul>
                     <div class="contact">
-                        <a class="contact-link" href="">
+                        <a class="contact-link" href="#">
                             Contact us
                         </a>
                     </div>
@@ -61,7 +61,18 @@
         <!-- START HOME -->
         <section id="home">
             <div class="container">
-                
+                <div class="home-words">
+                    <h1 class="title">
+                        Explore new places
+                        with travello
+                    </h1>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                    </p>
+                    <a class="started" href="#">
+                        Get started
+                    </a>
+                </div>
             </div>
         </section>
     </main>
