--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
                 </div>
             </div>
         </section>
+        <!-- START ABOUT -->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="about-container">
+                        <div class="about-imgs">
+                            <div class="about-img-top">
+                                <img src="./assets/image/image 2.png" alt="">
+                                <div class="about-img-bottom">
+                                    <img src="./assets/image/image 3.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about-words">
+                            <h2 class="about-title">About us</h4>
+                            <h3 class="title">Explore world with us</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <a class="started" href="#">Get started <img src="./assets/image/Vector.png" alt=""></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
