--- a/index.html
+++ b/index.html
@@ -102,6 +102,43 @@
                 </div>
             </div>
         </section>
+        <!-- START WHY US -->
+        <section id="whyUs">
+            <div class="container">
+                <div class="row">
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./assets/image/passport 1.png" alt="">
+                            <h4 class="title">Full Guide</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/image/passport 2.png" alt="">
+                            <h4 class="title">Transport</h4>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/image/passport 3.png" alt="">
+                            <h4 class="title">Easy Book</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/image/passport 4.png" alt="">
+                            <h4 class="title">Camp Fire</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
