--- a/index.html
+++ b/index.html
@@ -139,6 +139,46 @@
                 </div>
             </div>
         </section>
+        <!-- START TRIPS -->
+        <section id="trips">
+            <div class="container">
+                <div class="row">
+                    <h3 class="trips-title">
+                        Explore world with us
+                    </h3>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./assets/image/image 4.png" alt="">
+                            <div class="card-words">
+                                <h4 class="title">Roma, Italia</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/image/image 5.png" alt="">
+                            <div class="card-words">
+                                <h4 class="title">Jakarta, Indonesia</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/image/image 6.png" alt="">
+                            <div class="card-words">
+                                <h4 class="title">Bangkok, Thailand</h4>
+                                
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
