--- a/index.html
+++ b/index.html
@@ -179,6 +179,34 @@
                 </div>
             </div>
         </section>
+        <!-- What they say -->
+        <section id="whatSay">
+            <div class="container">
+                <div class="row">
+                    <div class="whatSay-container">
+                        <div class="whatSay-words">
+                            <h2 class="whatSay-title">
+                                What they say
+                            </h2>
+                            <h3 class="title">
+                                Customer Reviews
+                            </h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <a class="reviews" href="#">
+                                All reviews
+                            </a>
+                        </div>
+                        <div class="whatSay-img">
+                            <img src="./assets/image/image 7.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
