--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                             </p>
                             <a class="reviews" href="#">
                                 All reviews
+                                <img src="./assets/image/Vector.png" alt="">
                             </a>
                         </div>
                         <div class="whatSay-img">
@@ -207,6 +208,38 @@
                 </div>
             </div>
         </section>
+        <!-- START EXPLORE -->
+        <section id="explore">
+            <div class="explore-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="explore-container">
+                            <h2 class="about-title">
+                                About us
+                            </h2>
+                            <h3 class="title">
+                                Explore world with us
+                            </h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                            </p>
+                            <a class="started" href="#">
+                                Get Started
+                                <img src="./assets/image/Vector.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+            </div>
+        </section>
     </main>
+    <!-- END MAIN -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
