--- a/index.html
+++ b/index.html
@@ -236,10 +236,90 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                
+                <div class="logo">
+                    <a href="./index.html">
+                        <div class="logo-img">
+                            <img src="./assets/image/Vector-l.png" alt="">
+                            <img src="./assets/image/Vector-r.png" alt="">
+                        </div>
+                        <span class="logo-travello">
+                            Travello
+                        </span>
+                    </a>
+                </div>
+                <div class="learn">
+                    <h3 class="title">Learn More</h3>
+                    <ul class="list">
+                        <li class="listItem">
+                            <a href="">About Lift</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="">Press Relaases</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="">Environment</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="">Jobs</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="">Privacy Policy</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="ticket">
+                    <h3 class="title">Tickets & Booking</h3>
+                    <ul class="list">
+                        <li class="listItem">
+                            <a href="#">Lift Tickets</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="#">Season Passes</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="#">Vacation Packages</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contact">
+                    <h3 class="title">Contact Us</h3>
+                    <ul class="list">
+                        <li class="listItem">
+                            <span>Hotel Reservation:</span>
+                            <a href="tel:+123-456-7890">123-456-7890</a>
+                        </li>
+                        <li class="listItem">
+                            <span>Ticket Office:</span>
+                            <a href="tel:+123-456-7890">123-456-7890</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <h3 class="title">Social</h3>
+                    <a href="https://www.facebook.com/">
+                        <img src="./assets/image/Path.png" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <img src="./assets/image/Shape.png" alt="">
+                    </a>
+                    <a href="https://www.twitter.com/">
+                        <img src="./assets/image/Pathtw.png" alt="">
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <img src="./assets/image/Shapeyt.png" alt="">
+                    </a>
+                </div>
             </div>
+            <p class="copyright">
+                © 2022 Travello | All Rights Reserved
+            </p>
         </div>
 
     </footer>
+
+    
 </body>
 </html>
